--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Desarrollador Full Stack</h3>
           <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
+            Me encanta aprender y trabajar en equipo, soy una persona proactiva en busca de nuevos retos. 
+            Me especializo en desarrollo de software full stack, poseo conocimientos y experienica en lenguajes de programación, frameworks de desarrollo web, bases de datos relacionales y tecnologías de la nube. 
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -108,8 +108,7 @@
             </div>
           </div>
           <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+            <span style="font-style:italic">"El único modo de hacer un gran trabajo es amar lo que haces - Steve Jobs"</span>
           </p>
         </div>
       </div>
