--- a/index.html
+++ b/index.html
@@ -692,9 +692,9 @@
 
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box">
-            <i class="bx bx-map"></i>
-            <h3>Mi Dirección</h3>
-            <p>Chimaltenago, Guatemala</p>
+            <i class="bi bi-camera-reels"></i>
+            <h3>Agendemos una reunión virtual</h3>
+            <p>https://calendly.com/luisrene/30min</p>
           </div>
         </div>
 
