--- a/index.html
+++ b/index.html
@@ -692,9 +692,10 @@
 
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box">
-            <i class="bi bi-camera-reels"></i>
-            <h3>Agendemos una reunión virtual</h3>
-            <p>https://calendly.com/luisrene/30min</p>
+            <a href="https://calendly.com/luisrene/30min">
+              <i class="bx bx-video"></i>
+              <h3>Agendemos una reunión</h3>
+            </a>
           </div>
         </div>
 
