--- a/index.html
+++ b/index.html
@@ -693,8 +693,9 @@
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box">
             <a href="https://calendly.com/luisrene/30min">
-              <i class="bx bx-video"></i>
+              <i class="bx bx-calendar"></i>
               <h3>Agendemos una reunión</h3>
+              <i class="bx bx-calendar"></i>
             </a>
           </div>
         </div>
