--- a/index.html
+++ b/index.html
@@ -497,12 +497,12 @@
             <p>Desarollo de aplicaciones mobiles para IOS y Android con React Native</p>
           </div>
         </div>
-<!--
+
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-world"></i></div>
-            <h4><a href="">Nemo Enim</a></h4>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+            <div class="icon"><i class="bx bx-cloud"></i></div>
+            <h4><a href="">Soluciones basadas en la nube</a></h4>
+            <p>Soluciones de desarrollo de software basadas en Amazon webservices y Azure</p>
           </div>
         </div>
 
@@ -520,7 +520,7 @@
             <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
           </div>
         </div>
--->        
+                
       </div>
 
     </div>
