--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-code-curly"></i></div>
             <h4><a href="">Desarrollo Back-end</a></h4>
-            <p>Creación de REST APIs, WebApps, Refactorización, desarrollo con .NET Core, C#, PHP y Laravel</p>
+            <p>Creación de REST APIs, WebApps, refactorización de sistemas y desarrollo con .NET Core, C# y PHP</p>
           </div>
         </div>
 
@@ -508,16 +508,16 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-slideshow"></i></div>
-            <h4><a href="">Desar</a></h4>
-            <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+            <div class="icon"><i class="bx bx-cart"></i></div>
+            <h4><a href="">Ecommerce</a></h4>
+            <p>Desarrollo de tiendas en linea, landing pages y sitios de comercio de electrónico en general</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-arch"></i></div>
-            <h4><a href="">Divera don</a></h4>
-            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+            <div class="icon"><i class="bx bx-search-alt-2"></i></div>
+            <h4><a href="">Consultoria</a></h4>
+            <p>Consultoria sobre resolucion de retos empresariales, transformaciín digital y desarrollo de software enterprise</p>
           </div>
         </div>
                 
