--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-cart"></i></div>
             <h4><a href="">Ecommerce</a></h4>
-            <p>Desarrollo de tiendas en linea, landing , paginas web y sitios de comercio de electrónico en general</p>
+            <p>Desarrollo de tiendas en linea, landing pages, paginas web y sitios de comercio de electrónico en general</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
