--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
           </div>
           <p>
-            <span style="font-style:italic">"El único modo de hacer un gran trabajo es amar lo que haces - Steve Jobs"</span>
+            <span style="font-style:italic">"El único modo de hacer un gran trabajo es amar lo que haces" - Steve Jobs</span>
           </p>
         </div>
       </div>
