--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-search-alt-2"></i></div>
             <h4><a href="">Consultoria</a></h4>
-            <p>Consultoria sobre resolucion de retos empresariales, transformaciín digital y desarrollo de software enterprise</p>
+            <p>Consultoria sobre resolucion de retos empresariales, transformaciín digital, desarrollo de software enterprise, analísis de negocio y requerimientos </p>
           </div>
         </div>
                 
