--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Sitio web:</strong> <span>luisrene.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Telefono:</strong> <span>+502 41112144</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Chimaltenago, Guatemala</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Twitter:</strong> <span>@luislopez_dev</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>País:</strong> <span>Guatemala</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Idioma Inglés:</strong> <span>Avanzado</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Edad:</strong> <span>23</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Especialización:</strong> <span>Desarrollo Full Stack</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Grado:</strong> <span>Estudiante de ingeniería</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>luis.dev.master@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponible</span></li>
@@ -517,7 +517,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-search-alt-2"></i></div>
             <h4><a href="">Consultoria</a></h4>
-            <p>Consultoria sobre resolucion de retos empresariales, transformaciín digital, desarrollo de software enterprise, analísis de negocio y requerimientos </p>
+            <p>Consultoria sobre resolucion de retos empresariales, transformaciín digital, desarrollo de software enterprise, analísis de negocio y requerimientos</p>
           </div>
         </div>
                 
@@ -705,7 +705,7 @@
             <h3>Redes sociales</h3>
             <div class="social-links">
               <a href="https://twitter.com/luislopez_dev"><i class="bi bi-twitter"></i></a>
-              <a href="https://www.facebook.com/people/Luis-Rene-Lopez/100088453426907/" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://github.com/luislopez-dev" class="facebook"><i class="bi bi-github"></i></a>
               <!--
               <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
               <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>             
@@ -722,6 +722,7 @@
             <p>luis.dev.master@gmail.com</p>
           </div>
         </div>
+        <!--
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
@@ -729,6 +730,7 @@
             <p>+(502) 41112144</p>
           </div>
         </div>
+        -->
       </div>
 
       <!---
