--- a/index.html
+++ b/index.html
@@ -146,8 +146,10 @@
 
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
-            <i class="bi bi-award"></i>
-            <span data-purecounter-start="0" data-purecounter-end="24" data-purecounter-duration="1" class="purecounter"></span>
+            <a href="https://drive.google.com/drive/u/0/folders/1_uTHYbymrc4ERgc210QqejywLCLYN5L1">            
+              <i class="bi bi-award"></i>
+              <span data-purecounter-start="0" data-purecounter-end="24" data-purecounter-duration="1" class="purecounter"></span>
+            </a>
             <p>Cursos profesionales</p>
           </div>
         </div>
