--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">PHP<i class="val">100%</i></span>
+            <span class="skill">HTML / JavaScript<i class="val">100%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -480,7 +480,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-code-curly"></i></div>
             <h4><a href="">Desarrollo Back-end</a></h4>
-            <p>Creación de REST APIs, WebApps, refactorización de sistemas y desarrollo con .NET Core, C# y PHP</p>
+            <p>Creación de REST APIs, WebApps, refactorización de sistemas y desarrollo con .NET Core y C#</p>
           </div>
         </div>
 
