--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Desarrollador Full Stack</h3>
           <p class="fst-italic">
-            Me encanta aprender y trabajar en equipo, soy una persona proactiva en busca de nuevos retos. 
-            Me especializo en desarrollo de software full stack, poseo conocimientos y experienica en lenguajes de programación, frameworks de desarrollo web, bases de datos relacionales y tecnologías de la nube. 
+            Soy una persona proactiva en busca de nuevos retos, me encanta aprender y trabajar en equipo, estudio desarrollo de software de forma autodidacta desde el año 2018 y también estudio Ingeniería de sistemas de información en la universidad Mariano Gálvez de Guatemala. Me especializo en el desarrollo de software full stack, poseo conocimientos y experiencia en lenguajes de programación, frameworks de desarrollo web, bases de datos relacionales y tecnologías de la nube.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -395,6 +394,7 @@
   </section><!-- End About Section -->
 
   <!-- ======= Resume Section ======= -->
+  <!--
   <section id="resume" class="resume">
     <div class="container">
 
@@ -464,7 +464,9 @@
       </div>
 
     </div>
-  </section><!-- End Resume Section -->
+  </section>
+  -->
+  <!-- End Resume Section -->
 
   <!-- ======= Services Section ======= -->
   <section id="services" class="services">
@@ -479,7 +481,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-code-curly"></i></div>
-            <h4><a href="">Desarrollo Back-end</a></h4>
+            <h4>Desarrollo Back-end</h4>
             <p>Creación de REST APIs, WebApps, refactorización de sistemas y desarrollo con .NET Core y C#</p>
           </div>
         </div>
@@ -487,7 +489,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-slideshow"></i></div>
-            <h4><a href="">Desarrollo Front-end</a></h4>
+            <h4>Desarrollo Front-end</h4>
             <p>Desarrollo Front-end con React.js y Next.js</p>
           </div>
         </div>
@@ -495,31 +497,31 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-mobile"></i></div>
-            <h4><a href="">Desarrollo Mobil</a></h4>
-            <p>Desarollo de aplicaciones mobiles para IOS y Android con React Native</p>
+            <h4>Desarrollo Móvil</h4>
+            <p>Desarrollo de aplicaciones móviles para IOS y Android con React Native</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-cloud"></i></div>
-            <h4><a href="">Soluciones basadas en la nube</a></h4>
-            <p>Soluciones de desarrollo de software basadas en Amazon webservices y Azure</p>
+            <h4>Soluciones basadas en la nube</h4>
+            <p>Soluciones de desarrollo de software basadas en Amazon Web Services y Azure</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-cart"></i></div>
-            <h4><a href="">Ecommerce</a></h4>
-            <p>Desarrollo de tiendas en linea, landing pages, paginas web y sitios de comercio de electrónico en general</p>
+            <h4>Ecommerce</h4>
+            <p>Desarrollo de tiendas en línea, landing pages, páginas web y sitios de comercio de electrónico en general</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-search-alt-2"></i></div>
-            <h4><a href="">Consultoria</a></h4>
-            <p>Consultoria sobre resolucion de retos empresariales, transformaciín digital, desarrollo de software enterprise, analísis de negocio y requerimientos</p>
+            <h4>Consultoria</h4>
+            <p>Consultoría sobre resolución de retos empresariales, transformación digital, desarrollo de software enterprise, análisis de negocio y requerimientos</p>
           </div>
         </div>
                 
@@ -529,6 +531,7 @@
   </section><!-- End Services Section -->
 
   <!-- ======= Portfolio Section ======= -->
+  <!--
   <section id="portfolio" class="portfolio">
     <div class="container">
 
@@ -680,7 +683,7 @@
 
     </div>
   </section><!-- End Portfolio Section -->
-
+  -->
   <!-- ======= Contact Section ======= -->
   <section id="contact" class="contact">
     <div class="container">
