--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
           <div class="info-box">
             <a href="https://calendly.com/luisrene/30min">
               <i class="bx bx-calendar"></i>
-              <h3>Agendar cita gratuita</h3>
+              <h3 style="color:white;">Agendar cita gratuita</h3>
             </a>
           </div>
         </div>
