--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Desarrollador Full Stack</h3>
           <p class="fst-italic">
-            Soy una persona proactiva en busca de nuevos retos, me encanta aprender y trabajar en equipo, estudio desarrollo de software de forma autodidacta y estricta desde el año 2018 y también estudio Ingeniería de sistemas de información. Me especializo en el desarrollo de software full stack, poseo conocimientos y experiencia en lenguajes de programación, frameworks de desarrollo web, bases de datos relacionales y tecnologías de la nube.
+            Soy una persona proactiva en busca de nuevos retos, me encanta aprender y trabajar en equipo, estudio desarrollo de software de forma autodidacta desde el año 2018 y también estudio Ingeniería de sistemas de información. Me especializo en el desarrollo de software full stack, poseo conocimientos y experiencia en lenguajes de programación, frameworks de desarrollo web, bases de datos relacionales y tecnologías de la nube.
           </p>
           <div class="row">
             <div class="col-lg-6">
