--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Azure<i class="val">100%</i></span>
+            <span class="skill">AWS<i class="val">100%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">AWS<i class="val">100%</i></span>
+            <span class="skill">React native<i class="val">60%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -504,7 +504,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-cloud"></i></div>
             <h4>Soluciones basadas en la nube</h4>
-            <p>Soluciones de desarrollo de software basadas en Amazon Web Services y Azure</p>
+            <p>Soluciones de desarrollo de software basadas en Amazon Web Services</p>
           </div>
         </div>
 
