--- a/index.html
+++ b/index.html
@@ -167,21 +167,21 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">.Net Core / .Net Framework<i class="val">100%</i></span>
+            <span class="skill">C# / .Net Core<i class="val">100%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">C#<i class="val">100%</i></span>
+            <span class="skill">Node.js<i class="val">100%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">HTML / JavaScript<i class="val">100%</i></span>
+            <span class="skill">React.js / Next.js / React Native<i class="val">100%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -192,21 +192,21 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">React.js / Next.js<i class="val">100%</i></span>
+            <span class="skill">Google Cloud Platform<i class="val">100%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">AWS<i class="val">60%</i></span>
+            <span class="skill">AWS<i class="val">100%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">React native<i class="val">60%</i></span>
+            <span class="skill">Azure<i class="val">100%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -480,7 +480,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-code-curly"></i></div>
             <h4>Desarrollo Back-end</h4>
-            <p>Creación de REST APIs, WebApps, refactorización de sistemas y desarrollo con .NET Core y C#</p>
+            <p>Creación de REST APIs, WebApps, refactorización de sistemas y desarrollo con .NET Core, C#, Java y Node.js</p>
           </div>
         </div>
 
@@ -504,7 +504,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-cloud"></i></div>
             <h4>Soluciones basadas en la nube</h4>
-            <p>Soluciones de desarrollo de software basadas en Amazon Web Services</p>
+            <p>Soluciones de desarrollo de software basadas en la nube</p>
           </div>
         </div>
 
