--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-slideshow"></i></div>
             <h4>Desarrollo Front-end</h4>
-            <p>Desarrollo Front-end con React.js y Next.js</p>
+            <p>Desarrollo Front-end con React.js y Vue.js</p>
           </div>
         </div>
 
