--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-code-curly"></i></div>
             <h4>Desarrollo Back-end</h4>
-            <p>Creación de REST APIs, WebApps, refactorización de sistemas y desarrollo con .NET Core, C#, Java y Node.js</p>
+            <p>Creación de REST APIs, WebApps, refactorización de sistemas y desarrollo con .NET Core, C# y Node.js</p>
           </div>
         </div>
 
