--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">React.js / Next.js / React Native<i class="val">100%</i></span>
+            <span class="skill">React.js / Next.js<i class="val">100%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -192,7 +192,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Vue.js<i class="val">100%</i></span>
+            <span class="skill">React Native<i class="val">50%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -206,7 +206,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Azure<i class="val">100%</i></span>
+            <span class="skill">Azure<i class="val">50%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -488,7 +488,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-slideshow"></i></div>
             <h4>Desarrollo Front-end</h4>
-            <p>Desarrollo Front-end con React.js y Vue.js</p>
+            <p>Desarrollo Front-end con React.js</p>
           </div>
         </div>
 
